2006-01-04  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/music-glossary.tely (Pitch names): Added
	Spanish pitch names and durations, thanks to Ernesto Gancedo

2006-01-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (define-scheme-options): use quasi-quote for option
	init. Fixes verbose printing of .scm files.

	* stepmake/aclocal.m4: add spaces before - options.
	
2006-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (setup_paths): Bugfix: do not store result
	of path search in local block variable.

2006-01-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (NCSB_DIR): --enable-ncsb-dir
	(LINK_GXX_STATICALLY): denko.

	* mf/GNUmakefile ($(NCSB_TTFS)): NCSB_DIR iso. NCSB_PATH. 

	* configure.in (LINK_GXX_STATICALLY): --enable-ncsb-path option. 
	use locate to find c059033l.pfb. 
	
2006-01-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/tie-formatting-problem.cc
	(problem::generate_base_chord_configuration): Use my_round (was
	round).

	* lily/source-file.cc (file::get_counts)[!HAVE_MBRTOWC]: Bugfix,
	do not invoke mbrtowc.

	* lily/relocate.cc (setup_paths): Add more debugging verbosity.

2006-01-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/lily.scm (lilypond-all): oops. remove debugging hack.

2005-01-02  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/invoking.itely (svg): revise.

2006-01-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/lexer.ll: use sourcefilename iso. renameinput.

2006-01-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(NCSB_TTFS)): revise rule. Create
	<PostScriptName>.ttf instead of c059XXXttf.

	* lily/program-option.cc (LY_DEFINE): special support for
	--verbose, so it works before option init too.
 
	* mf/GNUmakefile (local-install): oops.

	* lily/lyric-hyphen.cc (print): oops.

	* buildscripts/pfx2ttf.fontforge: new file.
	
	* mf/GNUmakefile (NCSB_PATH): add vars for NCSB.
	($(outdir)/%.ttf): new rule. 
