@@ -35,10 +35,10 @@ AC_ARG_ENABLE(gui,
 
 
 NCSB_DIR=unknown
-AC_ARG_ENABLE(ncsb,
-[  --enable-ncsb-dir      set the path where Century Schoolbook fonts can be found.
+AC_ARG_WITH(ncsb,
+[  --with-ncsb-dir=DIR     location of Century Schoolbook fonts
                             Default: detect with locate(1)],
-    [NCSB_DIR=$enableval])
+    [NCSB_DIR=$withval])
 
 
 reloc_b=no
@@ -49,7 +49,7 @@ AC_ARG_ENABLE(relocation,
 FRAMEWORKDIR=".."
 AC_ARG_WITH(framework-dir,
     [  --with-framework-dir=DIR
-	relative the optional framework directory],[
+                          relative location of framework],[
 	if test "$withval" = "yes" -o "$withval" = "no"; then
 	    AC_MSG_WARN(Usage: --with-framework-dir=../lib/FRAMEWORK/DIR)
 	else
